2009-11-03  Stefan Monnier  <monnier@iro.umontreal.ca>

	* calendar/todo-mode.el (todo-add-category): Don't hardcode point-min==1.
	(todo-top-priorities): Only display-buffer when called interactively.
	(todo-item-start): Don't save excursion point.
	(todo-item-end): Be slightly more careful.  Add `include-sep' arg.
	(todo-insert-item-here, todo-file-item, todo-remove-item):
	Adjust uses of todo-item-start and todo-item-end.

	* emacs-lisp/autoload.el (generated-autoload-feature): Remove.
	(autoload-rubric): Don't use any more.
	* cedet/semantic/fw.el (semantic/loaddefs):
	* cedet/srecode.el (srecode/loaddefs):
	* cedet/ede.el (ede/loaddefs): Load rather than require.
	* lisp/cedet/ede/cpp-root.el:
	* lisp/cedet/ede/emacs.el:
	* lisp/cedet/ede/files.el:
	* lisp/cedet/ede/linux.el:
	* lisp/cedet/ede/locate.el:
	* lisp/cedet/ede/make.el:
	* lisp/cedet/ede/shell.el:
	* lisp/cedet/ede/speedbar.el:
	* lisp/cedet/ede/system.el:
	* lisp/cedet/ede/util.el:
	* lisp/cedet/semantic/analyze.el:
	* lisp/cedet/semantic/bovine.el:
	* lisp/cedet/semantic/complete.el:
	* lisp/cedet/semantic/ctxt.el:
	* lisp/cedet/semantic/db-file.el:
	* lisp/cedet/semantic/db-find.el:
	* lisp/cedet/semantic/db-global.el:
	* lisp/cedet/semantic/db-mode.el:
	* lisp/cedet/semantic/db-typecache.el:
	* lisp/cedet/semantic/db.el:
	* lisp/cedet/semantic/debug.el:
	* lisp/cedet/semantic/dep.el:
	* lisp/cedet/semantic/doc.el:
	* lisp/cedet/semantic/edit.el:
	* lisp/cedet/semantic/find.el:
	* lisp/cedet/semantic/format.el:
	* lisp/cedet/semantic/html.el:
	* lisp/cedet/semantic/ia-sb.el:
	* lisp/cedet/semantic/ia.el:
	* lisp/cedet/semantic/idle.el:
	* lisp/cedet/semantic/lex-spp.el:
	* lisp/cedet/semantic/lex.el:
	* lisp/cedet/semantic/mru-bookmark.el:
	* lisp/cedet/semantic/scope.el:
	* lisp/cedet/semantic/senator.el:
	* lisp/cedet/semantic/sort.el:
	* lisp/cedet/semantic/symref.el:
	* lisp/cedet/semantic/tag-file.el:
	* lisp/cedet/semantic/tag-ls.el:
	* lisp/cedet/semantic/tag-write.el: