@@ -1,3 +1,7 @@
+2009-11-04  Juanma Barranquero  <lekktu@gmail.com>
+
+	* mh-e.el (mh-loaddefs): Load rather than require.
+
 2009-10-06  Glenn Morris  <rgm@gnu.org>
 
 	* mh-show.el (mh-show-msg): Use window-full-height-p.
@@ -40,7 +44,7 @@
 
 	* mh-seq.el (mh-parse-flist-output-line): Return list rather than values.
 	We want to avoid emacs using m-v facilities.
-	(mh-folder-size-folder):  Ditto.
+	(mh-folder-size-folder): Ditto.
 	(mh-parse-flist-output-line): Ditto.
 	* mh-thread.el (mh-thread-prune-subject): Ditto.
 	* mh-xface.el (mh-picon-get-image): Ditto.
